--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <section id="racionais" class="section">
             <h2 class="text-3xl font-bold mb-6 text-center">Racionais MC's</h2>
             <div class="artist-card">
-                <img src="rcn.jpg" alt="Grupo Racionais MC's em apresentação ao vivo com integrantes em palco sob luzes dramáticas, vestindo roupas escuras e com microfones, representando o hip-hop brasileiro com temas sociais" class="mb-4" />
+                <img src="rcn.jpeg" alt="Grupo Racionais MC's em apresentação ao vivo com integrantes em palco sob luzes dramáticas, vestindo roupas escuras e com microfones, representando o hip-hop brasileiro com temas sociais" class="mb-4" />
                 <p class="mb-4">Formado em 1988 em São Paulo, o Racionais MC's é composto por Mano Brown, Ice Blue, Edi Rock e KL Jay. Eles são pioneiros no rap nacional, com letras que denunciam opressão racial, violência urbana e desigualdade social. Seus álbuns venderam milhões e influenciaram o gênero globalmente.</p>
                 <h3 class="text-2xl mb-2">Discografia Principal</h3>
                 <ul class="mb-4">
